GH-15 Correção na Documentação do batimento
